Closed Bug 846148 Opened 11 years ago Closed 11 years ago

Intermittent test_frames.html, test_doc.html | Assertion count 1 is greater than expected range 0-0 assertions (No node for the accessible tree walker!: 'aContent')

Categories

(Core :: Disability Access APIs, defect)

x86_64
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla22

People

(Reporter: RyanVM, Assigned: surkov)

References

(Blocks 1 open bug)

Details

(Keywords: assertion, intermittent-failure)

Attachments

(1 file)

https://tbpl.mozilla.org/php/getParsedLog.php?id=20168135&tree=Mozilla-Inbound

Rev4 MacOSX Snow Leopard 10.6 mozilla-inbound debug test mochitest-other on 2013-02-27 19:14:14 PST for push 2ba886324c76
slave: talos-r4-snow-012

19:43:15     INFO -  7296 INFO TEST-START | chrome://mochitests/content/a11y/accessible/states/test_frames.html
19:43:15     INFO -  ++DOMWINDOW == 50 (0x1081c8448) [serial = 488] [outer = 0x12d24fd08]
19:43:15     INFO -  7297 INFO TEST-INFO | chrome://mochitests/content/a11y/accessible/states/test_frames.html | must wait for load
19:43:15     INFO -  ++DOCSHELL 0x14f669c90 == 12 [id = 84]
19:43:15     INFO -  ++DOMWINDOW == 51 (0x155a92478) [serial = 489] [outer = 0x0]
19:43:15     INFO -  ++DOCSHELL 0x152548c20 == 13 [id = 85]
19:43:15     INFO -  ++DOMWINDOW == 52 (0x155a5d268) [serial = 490] [outer = 0x0]
19:43:15     INFO -  ++DOCSHELL 0x14e78ff60 == 14 [id = 86]
19:43:15     INFO -  ++DOMWINDOW == 53 (0x14f692508) [serial = 491] [outer = 0x0]
19:43:15     INFO -  ++DOCSHELL 0x14d1f9350 == 15 [id = 87]
19:43:15     INFO -  ++DOMWINDOW == 54 (0x14dbf82a8) [serial = 492] [outer = 0x0]
19:43:15     INFO -  ++DOCSHELL 0x14d64c060 == 16 [id = 88]
19:43:15     INFO -  ++DOMWINDOW == 55 (0x14d60cf98) [serial = 493] [outer = 0x0]
19:43:15     INFO -  WARNING: NS_ENSURE_TRUE(NS_SUCCEEDED(rv) && subjPrincipal) failed: file ../../../docshell/base/nsDocShell.cpp, line 8328
19:43:15     INFO -  WARNING: Subdocument container has no frame: file ../../../layout/base/nsDocumentViewer.cpp, line 2386
19:43:15     INFO -  ++DOMWINDOW == 56 (0x151535168) [serial = 494] [outer = 0x155a92478]
19:43:15     INFO -  WARNING: NS_ENSURE_TRUE(NS_SUCCEEDED(rv) && subjPrincipal) failed: file ../../../docshell/base/nsDocShell.cpp, line 8328
19:43:15     INFO -  WARNING: Subdocument container has no frame: file ../../../layout/base/nsDocumentViewer.cpp, line 2386
19:43:15     INFO -  ++DOMWINDOW == 57 (0x150a4d7b8) [serial = 495] [outer = 0x155a5d268]
19:43:15     INFO -  WARNING: NS_ENSURE_TRUE(NS_SUCCEEDED(rv) && subjPrincipal) failed: file ../../../docshell/base/nsDocShell.cpp, line 8328
19:43:15     INFO -  WARNING: Subdocument container has no frame: file ../../../layout/base/nsDocumentViewer.cpp, line 2386
19:43:15     INFO -  ++DOMWINDOW == 58 (0x151570108) [serial = 496] [outer = 0x14f692508]
19:43:15     INFO -  WARNING: NS_ENSURE_TRUE(NS_SUCCEEDED(rv) && subjPrincipal) failed: file ../../../docshell/base/nsDocShell.cpp, line 8328
19:43:15     INFO -  WARNING: Subdocument container has no frame: file ../../../layout/base/nsDocumentViewer.cpp, line 2386
19:43:15     INFO -  ++DOMWINDOW == 59 (0x14fb578f8) [serial = 497] [outer = 0x14dbf82a8]
19:43:15     INFO -  WARNING: NS_ENSURE_TRUE(NS_SUCCEEDED(rv) && subjPrincipal) failed: file ../../../docshell/base/nsDocShell.cpp, line 8328
19:43:15     INFO -  WARNING: Subdocument container has no frame: file ../../../layout/base/nsDocumentViewer.cpp, line 2386
19:43:15     INFO -  ++DOMWINDOW == 60 (0x14fb13598) [serial = 498] [outer = 0x14d60cf98]
19:43:15     INFO -  ###!!! ASSERTION: No node for the accessible tree walker!: 'aContent', file ../../../../accessible/src/base/TreeWalker.cpp, line 46
19:43:15     INFO -  mozilla::a11y::DocAccessible::CacheChildren() [accessible/src/generic/DocAccessible.cpp:1432]
19:43:15     INFO -  mozilla::a11y::Accessible::EnsureChildren() [accessible/src/generic/Accessible.cpp:3103]
19:43:15     INFO -  mozilla::a11y::DocAccessible::CacheChildrenInSubtree(mozilla::a11y::Accessible*) [obj-firefox/dist/include/nsTArray.h:277]
19:43:15     INFO -  mozilla::a11y::DocAccessible::DoInitialUpdate() [accessible/src/generic/DocAccessible.cpp:1489]
19:43:15     INFO -  mozilla::a11y::NotificationController::WillRefresh(mozilla::TimeStamp) [obj-firefox/dist/include/nsTArray.h:277]
19:43:15     INFO -  nsRefreshDriver::Tick(long long, mozilla::TimeStamp) [layout/base/nsRefreshDriver.cpp:866]
19:43:15     INFO -  mozilla::RefreshDriverTimer::Tick() [obj-firefox/dist/include/nsTArray.h:277]
19:43:15     INFO -  nsTimerImpl::Fire() [xpcom/threads/nsTimerImpl.cpp:497]
19:43:15     INFO -  nsTimerEvent::Run() [xpcom/threads/nsTimerImpl.cpp:565]
19:43:15     INFO -  nsThread::ProcessNextEvent(bool, bool*) [xpcom/threads/nsThread.cpp:627]
19:43:15     INFO -  NS_ProcessPendingEvents_P(nsIThread*, unsigned int) [obj-firefox/xpcom/build/nsThreadUtils.cpp:188]
19:43:15     INFO -  nsBaseAppShell::NativeEventCallback() [widget/xpwidgets/nsBaseAppShell.cpp:98]
19:43:15     INFO -  nsAppShell::ProcessGeckoEvents(void*) [widget/cocoa/nsAppShell.mm:388]
19:43:15     INFO -  CoreFoundation + 0x4e401
19:43:15     INFO -  CoreFoundation + 0x4c5f9
19:43:15     INFO -  CoreFoundation + 0x4bdbf
19:43:15     INFO -  HIToolbox + 0x2e7ee
19:43:15     INFO -  HIToolbox + 0x2e551
19:43:15     INFO -  HIToolbox + 0x2e4ac
19:43:15     INFO -  AppKit + 0x43eb2
19:43:15     INFO -  -AppKit + 0x43801
19:43:15     INFO -  -[GeckoNSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] [widget/cocoa/nsAppShell.mm:164]
19:43:15     INFO -  -AppKit + 0x968f
19:43:15     INFO -  nsAppShell::Run() [widget/cocoa/nsAppShell.mm:741]
19:43:15     INFO -  nsAppStartup::Run() [toolkit/components/startup/nsAppStartup.cpp:288]
19:43:15     INFO -  XREMain::XRE_mainRun() [toolkit/xre/nsAppRunner.cpp:3885]
19:43:15     INFO -  XREMain::XRE_main(int, char**, nsXREAppData const*) [toolkit/xre/nsAppRunner.cpp:3952]
19:43:15     INFO -  XRE_main [toolkit/xre/nsAppRunner.cpp:4155]
19:43:15     INFO -  main [browser/app/nsBrowserApp.cpp:224]
19:43:15     INFO -  WARNING: NS_ENSURE_SUCCESS(rv, false) failed with result 0x8000FFFF: file ../../../../content/base/src/nsContentUtils.cpp, line 3011
19:43:15     INFO -  WARNING: NS_ENSURE_TRUE(pusher.Push(aBoundElement)) failed: file ../../../../content/xbl/src/nsXBLProtoImplMethod.cpp, line 308
19:43:15     INFO -  WARNING: NS_ENSURE_SUCCESS(rv, false) failed with result 0x8000FFFF: file ../../../../content/base/src/nsContentUtils.cpp, line 3011
19:43:15     INFO -  WARNING: NS_ENSURE_TRUE(pusher.Push(aBoundElement)) failed: file ../../../../content/xbl/src/nsXBLProtoImplMethod.cpp, line 308
19:43:15     INFO -  WARNING: NS_ENSURE_SUCCESS(rv, false) failed with result 0x8000FFFF: file ../../../../content/base/src/nsContentUtils.cpp, line 3011
19:43:15     INFO -  WARNING: NS_ENSURE_TRUE(pusher.Push(aBoundElement)) failed: file ../../../../content/xbl/src/nsXBLProtoImplMethod.cpp, line 308
19:43:15     INFO -  WARNING: NS_ENSURE_SUCCESS(rv, false) failed with result 0x8000FFFF: file ../../../../content/base/src/nsContentUtils.cpp, line 3011
19:43:15     INFO -  WARNING: NS_ENSURE_TRUE(pusher.Push(aBoundElement)) failed: file ../../../../content/xbl/src/nsXBLProtoImplMethod.cpp, line 308
19:43:15     INFO -  WARNING: NS_ENSURE_SUCCESS(rv, false) failed with result 0x8000FFFF: file ../../../../content/base/src/nsContentUtils.cpp, line 3011
19:43:15     INFO -  WARNING: NS_ENSURE_TRUE(pusher.Push(aBoundElement)) failed: file ../../../../content/xbl/src/nsXBLProtoImplMethod.cpp, line 308
19:43:15     INFO -  WARNING: NS_ENSURE_TRUE(selection->GetRangeCount()) failed: file ../../../../editor/libeditor/base/nsEditor.cpp, line 3895
19:43:15     INFO -  WARNING: NS_ENSURE_SUCCESS(res, res) failed with result 0x80004005: file ../../../../editor/libeditor/html/nsHTMLEditRules.cpp, line 309
19:43:15     INFO -  WARNING: NS_ENSURE_TRUE(selection->GetRangeCount()) failed: file ../../../../editor/libeditor/base/nsEditor.cpp, line 3895
19:43:15     INFO -  WARNING: NS_ENSURE_SUCCESS(res, res) failed with result 0x80004005: file ../../../../editor/libeditor/html/nsHTMLEditRules.cpp, line 7977
19:43:15     INFO -  7298 INFO TEST-PASS | chrome://mochitests/content/a11y/accessible/states/test_frames.html | wrong state bits for [ 'document node', address: [object HTMLDocument] ] [test1: frameDoc]!
19:43:15     INFO -  7299 INFO TEST-PASS | chrome://mochitests/content/a11y/accessible/states/test_frames.html | wrong state bits for [ 'document node', address: [object HTMLDocument] ] [test1: frameDocArticle]!
19:43:15     INFO -  7300 INFO TEST-PASS | chrome://mochitests/content/a11y/accessible/states/test_frames.html | wrong state bits for [ 'document node', address: [object HTMLDocument] ] [test1: frameDocCheckbox]!
19:43:15     INFO -  7301 INFO TEST-PASS | chrome://mochitests/content/a11y/accessible/states/test_frames.html | state bits should not be present in ID [ 'document node', address: [object HTMLDocument] ] [test1: frameDocCheckbox]!
19:43:15     INFO -  7302 INFO TEST-PASS | chrome://mochitests/content/a11y/accessible/states/test_frames.html | wrong state bits for [ 'document node', address: [object HTMLDocument] ] [test1: frameDocTextbox]!
19:43:15     INFO -  7303 INFO TEST-PASS | chrome://mochitests/content/a11y/accessible/states/test_frames.html | wrong extra state bits for [ 'document node', address: [object HTMLDocument] ] [test1: frameDocTextbox]!
19:43:15     INFO -  7304 INFO TEST-PASS | chrome://mochitests/content/a11y/accessible/states/test_frames.html | state bits should not be present in ID [ 'document node', address: [object HTMLDocument] ] [test1: frameDocTextbox]!
19:43:15     INFO -  7305 INFO TEST-PASS | chrome://mochitests/content/a11y/accessible/states/test_frames.html | Singleline [ 'document node', address: [object HTMLDocument] ] [test1: frameDocTextbox] cannot be multiline!
19:43:15     INFO -  WARNING: NS_ENSURE_TRUE(selection->GetRangeCount()) failed: file ../../../../editor/libeditor/base/nsEditor.cpp, line 3895
19:43:15     INFO -  WARNING: NS_ENSURE_SUCCESS(res, res) failed with result 0x80004005: file ../../../../editor/libeditor/html/nsHTMLEditRules.cpp, line 309
19:43:15     INFO -  WARNING: NS_ENSURE_TRUE(selection->GetRangeCount()) failed: file ../../../../editor/libeditor/base/nsEditor.cpp, line 3895
19:43:15     INFO -  WARNING: NS_ENSURE_SUCCESS(res, res) failed with result 0x80004005: file ../../../../editor/libeditor/html/nsHTMLEditRules.cpp, line 7977
19:43:15     INFO -  7306 INFO TEST-PASS | chrome://mochitests/content/a11y/accessible/states/test_frames.html | wrong state bits for [ 'document node', address: [object HTMLDocument] ] [test2: frameDoc]!
19:43:15     INFO -  7307 INFO TEST-PASS | chrome://mochitests/content/a11y/accessible/states/test_frames.html | wrong extra state bits for [ 'document node', address: [object HTMLDocument] ] [test2: frameDoc]!
19:43:15     INFO -  7308 INFO TEST-PASS | chrome://mochitests/content/a11y/accessible/states/test_frames.html | state bits should not be present in ID [ 'document node', address: [object HTMLDocument] ] [test2: frameDoc]!
19:43:15     INFO -  7309 INFO TEST-PASS | chrome://mochitests/content/a11y/accessible/states/test_frames.html | wrong state bits for [ 'document node', address: [object HTMLDocument] ] [test2: frameDocArticle]!
19:43:15     INFO -  7310 INFO TEST-PASS | chrome://mochitests/content/a11y/accessible/states/test_frames.html | wrong state bits for [ 'document node', address: [object HTMLDocument] ] [test2: frameDocCheckbox]!
19:43:15     INFO -  7311 INFO TEST-PASS | chrome://mochitests/content/a11y/accessible/states/test_frames.html | state bits should not be present in ID [ 'document node', address: [object HTMLDocument] ] [test2: frameDocCheckbox]!
19:43:15     INFO -  7312 INFO TEST-PASS | chrome://mochitests/content/a11y/accessible/states/test_frames.html | wrong state bits for [ 'document node', address: [object HTMLDocument] ] [test2: frameDocTextbox]!
19:43:15     INFO -  7313 INFO TEST-PASS | chrome://mochitests/content/a11y/accessible/states/test_frames.html | wrong extra state bits for [ 'document node', address: [object HTMLDocument] ] [test2: frameDocTextbox]!
19:43:15     INFO -  7314 INFO TEST-PASS | chrome://mochitests/content/a11y/accessible/states/test_frames.html | state bits should not be present in ID [ 'document node', address: [object HTMLDocument] ] [test2: frameDocTextbox]!
19:43:15     INFO -  7315 INFO TEST-PASS | chrome://mochitests/content/a11y/accessible/states/test_frames.html | Singleline [ 'document node', address: [object HTMLDocument] ] [test2: frameDocTextbox] cannot be multiline!
19:43:15     INFO -  WARNING: NS_ENSURE_TRUE(selection->GetRangeCount()) failed: file ../../../../editor/libeditor/base/nsEditor.cpp, line 3895
19:43:15     INFO -  WARNING: NS_ENSURE_SUCCESS(res, res) failed with result 0x80004005: file ../../../../editor/libeditor/html/nsHTMLEditRules.cpp, line 309
19:43:15     INFO -  WARNING: NS_ENSURE_TRUE(selection->GetRangeCount()) failed: file ../../../../editor/libeditor/base/nsEditor.cpp, line 3895
19:43:15     INFO -  WARNING: NS_ENSURE_SUCCESS(res, res) failed with result 0x80004005: file ../../../../editor/libeditor/html/nsHTMLEditRules.cpp, line 7977
19:43:15     INFO -  7316 INFO TEST-PASS | chrome://mochitests/content/a11y/accessible/states/test_frames.html | wrong state bits for [ 'document node', address: [object HTMLDocument] ] [test3: frameDocArticle]!
19:43:15     INFO -  7317 INFO TEST-PASS | chrome://mochitests/content/a11y/accessible/states/test_frames.html | wrong extra state bits for [ 'document node', address: [object HTMLDocument] ] [test3: frameDocArticle]!
19:43:15     INFO -  7318 INFO TEST-PASS | chrome://mochitests/content/a11y/accessible/states/test_frames.html | state bits should not be present in ID [ 'document node', address: [object HTMLDocument] ] [test3: frameDocArticle]!
19:43:15     INFO -  WARNING: NS_ENSURE_TRUE(selection->GetRangeCount()) failed: file ../../../../editor/libeditor/base/nsEditor.cpp, line 3895
19:43:15     INFO -  WARNING: NS_ENSURE_SUCCESS(res, res) failed with result 0x80004005: file ../../../../editor/libeditor/html/nsHTMLEditRules.cpp, line 309
19:43:15     INFO -  WARNING: NS_ENSURE_TRUE(selection->GetRangeCount()) failed: file ../../../../editor/libeditor/base/nsEditor.cpp, line 3895
19:43:15     INFO -  WARNING: NS_ENSURE_SUCCESS(res, res) failed with result 0x80004005: file ../../../../editor/libeditor/html/nsHTMLEditRules.cpp, line 7977
19:43:15     INFO -  7319 INFO TEST-PASS | chrome://mochitests/content/a11y/accessible/states/test_frames.html | wrong state bits for [ 'document node', address: [object HTMLDocument] ] [test4: frameDocCheckbox]!
19:43:15     INFO -  7320 INFO TEST-PASS | chrome://mochitests/content/a11y/accessible/states/test_frames.html | state bits should not be present in ID [ 'document node', address: [object HTMLDocument] ] [test4: frameDocCheckbox]!
19:43:15     INFO -  7321 INFO TEST-PASS | chrome://mochitests/content/a11y/accessible/states/test_frames.html | wrong state bits for [ 'document node', address: [object HTMLDocument] ] [test5: frameUpdateDoc]!
19:43:15     INFO -  7322 INFO TEST-PASS | chrome://mochitests/content/a11y/accessible/states/test_frames.html | wrong extra state bits for [ 'document node', address: [object HTMLDocument] ] [test5: frameUpdateDoc]!
19:43:15     INFO -  7323 INFO TEST-PASS | chrome://mochitests/content/a11y/accessible/states/test_frames.html | state bits should not be present in ID [ 'document node', address: [object HTMLDocument] ] [test5: frameUpdateDoc]!
19:43:15     INFO -  7324 INFO TEST-PASS | chrome://mochitests/content/a11y/accessible/states/test_frames.html | extraState bits should not be present in ID [ 'document node', address: [object HTMLDocument] ] [test5: frameUpdateDoc]!
19:43:15     INFO -  7325 INFO TEST-END | chrome://mochitests/content/a11y/accessible/states/test_frames.html | finished in 531ms
19:43:15     INFO -  WARNING: NS_ENSURE_TRUE(mDisabledJSAndPlugins) failed: file ../../../../editor/composer/src/nsEditingSession.cpp, line 208
19:43:15     INFO -  ++DOMWINDOW == 61 (0x151a5d2c8) [serial = 499] [outer = 0x12d24fd08]
19:43:15     INFO -  7326 ERROR TEST-UNEXPECTED-FAIL | chrome://mochitests/content/a11y/accessible/states/test_frames.html | Assertion count 1 is greater than expected range 0-0 assertions.
Attached patch patchSplinter Review
Assignee: nobody → surkov.alexander
Status: NEW → ASSIGNED
Attachment #719317 - Flags: review?(trev.saunders)
Attachment #719317 - Flags: review?(trev.saunders) → review+
background from irc for the record:

tbsaunde: surkov: so, do you understand why we have a document with no root elm?
[3:03pm] surkov: tbsaunde: it gets created too early
[3:03pm] surkov: also previously we rejected to create a document without root elements
[3:04pm] tbsaunde: surkov: weird that there is such a so early, but ok I guess
Please be sure to fix the test annotation before pushing so we don't get unexpected passes instead :)
(In reply to Ryan VanderMeulen [:RyanVM] from comment #3)
> Please be sure to fix the test annotation before pushing so we don't get
> unexpected passes instead :)

where is that?
(In reply to alexander :surkov from comment #4)
> (In reply to Ryan VanderMeulen [:RyanVM] from comment #3)
> > Please be sure to fix the test annotation before pushing so we don't get
> > unexpected passes instead :)
> 
> where is that?

*sigh* That's what I get for reading bugmail in bed. This one isn't annotated of course. Sorry for the confusion.
https://tbpl.mozilla.org/php/getParsedLog.php?id=20294765&tree=Mozilla-Inbound
Summary: Intermittent test_frames.html | Assertion count 1 is greater than expected range 0-0 assertions (No node for the accessible tree walker!: 'aContent') → Intermittent test_frames.html, test_doc.html | Assertion count 1 is greater than expected range 0-0 assertions (No node for the accessible tree walker!: 'aContent')
(Note that was from before the comment 7 changeset landed)
https://hg.mozilla.org/mozilla-central/rev/8d8295158277
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: