Bug 846148 - assertion: no node for the accessible tree walker: 'aContent', r=tbsaunde